# azshuttle

./: README.md  azshuttle.example.yml  pyproject.toml
azshuttle/: cli.py
